# trinity

./: .env.example  .gitignore  CLAUDE.local.md.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE-git-tab-component-error.md  LICENSE  README.md  SECURITY.md  deploy.config.example  docker-compose.prod.yml  docker-compose.yml  hackathon_context.md  install.sh  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
Compliance/: README.md  SOC2_CHECKLIST.md  SOC2_REQUIREMENTS_2025.md
config/: otel-collector.yaml  vector.yaml
dev-methodology-template/: README.md  SETUP.md
docs/: ACTIVITY_TRACKING_ARCHITECTURE.md  AGENT_CUSTOM_METRICS_SPEC.md  AGENT_NETWORK_DEMO.md  AGENT_TEMPLATE_SPEC.md  AUTONOMOUS_AGENT_DESIGN.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  GEMINI_SUPPORT.md  GITHUB_ISSUES_MIGRATION.md  GOOGLE_OAUTH_SETUP.md  HUMAN_COGNITIVE_AWARE_DESIGN.md  KNOWN_ISSUES.md  MULTI_AGENT_SYSTEM_GUIDE.md  NEVERMINED_TRINITY_PURCHASING_GUIDE.md  QUERYING_LOGS.md  TESTING_GUIDE.md  TEST_COVERAGE_GAP_REPORT.md  TIMEZONE_HANDLING.md  TRINITY_COMPATIBLE_AGENT_GUIDE.md  USER_STORIES_COVERAGE_REPORT.md  USER_STORIES_INVENTORY.md  VERSIONING_AND_UPGRADES.md  business-explainer-diagrams.md  hackathon-business-ideas.md  trinity-architecture-diagrams.md
scripts/: extract-credentials.py  trinity-listen.sh
src/scheduler/: __init__.py  agent_client.py  config.py  database.py  locking.py  main.py  models.py  pyproject.toml  service.py
tests/: conftest.py  pytest.ini  pytest.ini.bak  registry.json  (+57 more)
(+1153 files in other folders)
