[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-scheduler"
version = "1.0.0"
description = "Trinity Scheduler Service"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.0",
    "croniter>=2.0.1",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools]
packages = ["scheduler"]
package-dir = {"scheduler" = "."}
